--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-file-reader": "^1.1.4",
+    "react-google-places-autocomplete": "^3.0.0-alpha.1",
+    "react-multiple-image-input": "^1.0.0",
+    "react-scripts": "3.4.3",
+    "react-tabs": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
